gobmkida/c1/hash_init
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/hash_init/src/engine/hash.c:549:41: error: use of undeclared identifier 'current_influence'
*( struct influence_data **)( ( char *)&current_influence + v0 * 8) = ( struct influence_data *)hash_rand( ); 
                                        ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/hash_init/src/obj/1/hash.o] Error 1
